--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -65,7 +65,7 @@
   $sizes: xs, sm, md, lg, xl;
 
   @each $size in $sizes {
-    @include breakpoint(#{$size}) {
+    @include breakpoint($size) {
       @for $i from 1 through 12 {
         &.col__#{$size}__#{$i} {
           width: calc($i/12 * 100%);
