--- a/components/custom/Showcase/Showcase.module.scss
+++ b/components/custom/Showcase/Showcase.module.scss
@@ -4,17 +4,36 @@
 .showcase {
   background-color: pink;
   height: calc(100vh - 5rem);
+  //position: relative;
   &__images {
     aspect-ratio: 16/9;
     width: 100vw;
     background-color: red;
-
+    overflow: hidden;
+    &__list {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: nowrap;
+      transition: all 1s;
+      &__item {
+        width: 100%;
+        height: 100%;
+        &__image {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          object-position: center;
+        }
+      }
+    }
     @include mixins.breakpoint(laptop) {
-      position: absoulte;
-      top: 0;
+      width: 60vw;
+      position: absolute;
+      top: 5rem;
       left: 50%;
-      z-index: 1;
       transform: translateX(-50%);
+      z-index: 1;
     }
   }
   &__content {
@@ -24,12 +43,12 @@
     @include mixins.breakpoint(laptop) {
       margin-top: 0;
     }
-    // background-color: tan;
   }
   &__counter {
     display: none;
     @include mixins.breakpoint(laptop) {
       display: block;
+      font-size: 1.5rem;
       font-family: vars.$font__fat;
     }
   }
