--- a/components/layout/Row/Row.module.scss
+++ b/components/layout/Row/Row.module.scss
@@ -9,7 +9,7 @@
     border-bottom: 1px solid gray;
   }
   &.border-top-1 {
-    border-bottom: 1px solid white;
+    border-top: 1px solid white;
   }
   @include mixins.generateJustifyContentClasses();
   @include mixins.generateAlignItemsClasses();
