--- a/sass/abstracts/_vars.scss
+++ b/sass/abstracts/_vars.scss
@@ -1,4 +1,5 @@
-$font_condensed: "Roboto Condensed", sans-serif;
+$font__condensed: "Roboto Condensed", sans-serif;
 $font__fat: "Abril Fatface", serif;
 $font__slab: "Roboto Slab", serif;
 $font__regular: "Roboto", sans-serif;
+$color__brand: "#1DB954";
