length and json error

--- a/components/html/Heading/Heading.module.scss
+++ b/components/html/Heading/Heading.module.scss
@@ -3,6 +3,7 @@
 .heading {
   margin: 0;
   padding: 0;
+  hyphens: manual;
   // font-family: Arial;
 
   &--1 {
@@ -11,6 +12,8 @@
   }
   &--2 {
     font-size: 2rem;
+    font-family: vars.$font__regular;
+    font-weight: bold;
   }
   &--3 {
     font-size: 1rem;
