--- a/components/regions/Header/Header.module.scss
+++ b/components/regions/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@use "../../../sass/abstracts/mixins";
 .header {
   // background-color: lightblue;
   height: 7rem;
@@ -6,4 +7,8 @@
   text-align: center;
   position: relative;
   z-index: 2;
+  margin-bottom: 10rem;
+  @include mixins.breakpoint(laptop) {
+    margin-bottom: 0;
+  }
 }
